Added all the confirmed changes

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             </p>
             <h3>Download Sponsorship Brochure</h3>
             <div class=" col-lg-12 text-center">
-                <a class="btn btn-secondary" role="button" href="./docs/UtkalHacks Old Brochure.pdf" target="_blank">Download</a>
+                <a class="btn btn-secondary" role="button" href="./docs/UtkalHacks 2.0 Prospectus.pdf" target="_blank">Download</a>
             </div>
         </div>
     </section>
