--- a/index.html
+++ b/index.html
@@ -58,13 +58,7 @@
      <!-- Beta Badge -->
     <div class="badge">Beta</div>
 
-    <div>
-        <div id="bg">
-            <img src="img\assests\Earth.&Stars.jpg" alt="UtkalHacks background" class="img-fluid">
-        </div>
 
-        <img src="img\assests\Chandrayaan2.png" class="rocket 1 parallax" data-parallax-ratio="4">
-    </div>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
@@ -112,7 +106,13 @@
     <header class="masthead text-white d-flex">
         <div class="container my-auto home-container">
             <div class="row">
-                <!--
+                <div id="bg">
+                    <img src="img\assests\Earth.&Stars.jpg" alt="UtkalHacks background" class="img-fluid">
+                    <div class="rocketdiv parallax" data-parallax-ratio="6">
+                        <img src="img\assests\Chandrayaan2.png">
+                    </div>
+                </div>  
+        <!--
         <div class="col-lg-12">
           <h1 style="line-height: 1.2">
             <strong>Odisha's Biggest
@@ -121,9 +121,9 @@
         </div>-->
                 <div class="col-lg-12 mt-3">
                     <p class="text-faded" style="line-height: 1.8;">
-                        <h5>It's Not Just a Hackathon
-            <br>UtkalHacks | 31st January - 2nd February, 2020
-              </h5>
+                    <h5>It's Not Just a Hackathon
+                    <br>UtkalHacks | 31st January - 2nd February, 2020
+                    </h5>
                 </div>
                 <div class="col-lg-12" style="margin-top: 2.5rem !important">
                     <p class="text-faded">Registration Will Open Soon!</p>
