--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
         <div class="container my-auto home-container">
             <div class="row">
                 <div id="bg">
-                    <img src="img\assests\Earth.&Stars.jpg" alt="UtkalHacks background" class="img-fluid">
+                    <img src="img\assests\Earth.&Stars.jpg" alt="UtkalHacks background" class="img-fluid bg">
                     <div class="rocketdiv parallax" data-parallax-ratio="6">
                         <img src="img\assests\Chandrayaan2.png">
                     </div>
                 </div>  
         <!--
-            
+
         <div class="col-lg-12">
           <h1 style="line-height: 1.2">
             <strong>Odisha's Biggest
