--- a/index.html
+++ b/index.html
@@ -141,11 +141,9 @@
                 <div class="col-lg-8" style="margin-left: 40px; margin-top: 8rem; text-align: justify">
 
                     <h2 class="section-heading text-white" style="font-size: 2.5rem;">Today's Hackathon System is Broken!</h2>
-                    <li class="text-white">Nothing useful hacks are being created at a hackathon – the lack of time, direction and objective, fuels the creation of Vaporware.</li>
-
-                    <li class="text-white">Participants tend to focus on the shiny thing, but they don’t necessarily follow that up with a delivery model that will truly transform their initiative.</li>
-
-                    <li class="text-white">The problem is that the <b>organizers</b> running hackathons haven’t changed what is behind the curtain in the way of resources, methods, processes and tooling. Which is why half the time ideas fall off the side of the desk after an event.</li>
+                    <p class="text-white">Nothing useful hacks are being created at a hackathon – the lack of time, direction and objective, fuels the creation of Vaporware. 
+                        Participants tend to focus on the shiny thing, but they don’t necessarily follow that up with a delivery model that will truly transform their initiative.
+                        The problem is that the <b>organizers</b> running hackathons haven’t changed what is behind the curtain in the way of resources, methods, processes and tooling. Which is why half the time ideas fall off the side of the desk after an event.</p>
 
                 </div>
             </div>
@@ -217,10 +215,12 @@
                 </div>
             </div>
             <p>
-                To begin with, we will invite interested participants to make a quick submission of their idea online. These submissions will be evaluated and the top 20 teams will be shortlisted to attend the SprintDay and HackDay. </p>
-            <p>Then top 8 teams will be shortlisted for the PitchDay. The top teams at PitchDay will stand to win cash prizes and pilot opportunity with VC partners.
+                To begin with, we will invite interested participants to make a quick submission of their idea online. These submissions will be evaluated and the top 20 teams will be shortlisted to attend the SprintDay and HackDay. 
+            Then top 8 teams will be shortlisted for the PitchDay. The top teams at PitchDay will stand to win cash prizes and pilot opportunity with VC partners.
             </p>
-            <a class="btn btn-secondary" role="button" href="https://wiki.utkalhacks.tech/how-it-works" target="_blank">Learn More</a>
+            <div class="col-lg-12 text-center">
+            <a class="btn btn-secondary" role="button" href="https://wiki.utkalhacks.tech/how-it-works" target="_blank">How It Works</a>
+            </div>
         </div>
     </section>
 
@@ -388,7 +388,7 @@
                 <a href="mailto:sponsorships@emisha.community" class="text-center">sponsorships@emisha.community</a>
             </p>
             <h3>Download Sponsorship Brochure</h3>
-            <div class=" col-lg-12 text-center">
+            <div class="col-lg-12 text-center">
                 <a class="btn btn-secondary" role="button" href="./docs/UtkalHacks 2.0 Prospectus.pdf" target="_blank">Download</a>
             </div>
         </div>
