--- a/index.html
+++ b/index.html
@@ -421,8 +421,8 @@
                             <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse1">
                                 <a class="panel-title card-title text-black">
                                     <h5 class="arrow display-5">
-                    Who can participate?
-                  </h5>
+                                        Who can participate?
+                                    </h5>
                                 </a>
                             </button>
                             <div id="collapse1" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-One">
@@ -435,8 +435,8 @@
                             <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse2">
                                 <a class="panel-title card-title text-black">
                                     <h5 class="arrow display-5">
-                    When will the applications close?
-                  </h5>
+                                        When will the applications close?
+                                    </h5>
                                 </a>
                             </button>
                             <div id="collapse2" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Two">
@@ -450,8 +450,8 @@
                             <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse3">
                                 <a class="panel-title card-title text-black">
                                     <h5 class="arrow display-5">
-                    How does the application process work?
-                  </h5>
+                                        How does the application process work?
+                                    </h5>
                                 </a>
                             </button>
                             <div id="collapse3" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Three">
@@ -464,8 +464,8 @@
                             <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse3">
                                 <a class="panel-title card-title text-black">
                                     <h5 class="arrow display-5">
-                    What exactly will happen during the four-day hackathon?
-                  </h5>
+                                        What exactly will happen during the four-day hackathon?
+                                    </h5>
                                 </a>
                             </button>
                             <div id="collapse4" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Four">
@@ -480,8 +480,8 @@
                             <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse5">
                                 <a class="panel-title card-title text-black">
                                     <h5 class="arrow display-5">
-                    How much does it cost?
-                  </h5>
+                                        How much does it cost?
+                                    </h5>
                                 </a>
                             </button>
                             <div id="collapse5" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Four">
@@ -494,8 +494,8 @@
                             <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse5">
                                 <a class="panel-title card-title text-black">
                                     <h5 class="arrow display-5">
-                    Can we apply as a team?
-                  </h5>
+                                        Can we apply as a team?
+                                    </h5>
                                 </a>
                             </button>
                             <div id="collapse5" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Five">
@@ -509,8 +509,8 @@
                             <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse6">
                                 <a class="panel-title card-title text-black">
                                     <h5 class="arrow display-5">
-                    How big can a team be?
-                  </h5>
+                                        How big can a team be?
+                                    </h5>
                                 </a>
                             </button>
                             <div id="collapse6" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Six">
@@ -524,8 +524,8 @@
                             <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse7">
                                 <a class="panel-title card-title text-black">
                                     <h5 class="arrow display-5">
-                    What if I don’t have a team or an idea?
-                  </h5>
+                                        What if I don’t have a team or an idea?
+                                    </h5>
                                 </a>
                             </button>
                             <div id="collapse7" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Seven">
@@ -539,8 +539,8 @@
                             <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse9">
                                 <a class="panel-title card-title text-black">
                                     <h5 class="arrow display-5">
-                    Once I am accepted, what do I need to bring?
-                  </h5>
+                                        Once I am accepted, what do I need to bring?
+                                    </h5>
                                 </a>
                             </button>
                             <div id="collapse9" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Nine">
@@ -554,8 +554,8 @@
                             <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse10">
                                 <a class="panel-title card-title text-black">
                                     <h5 class="arrow display-5">
-                    What should I bring?
-                  </h5>
+                                        What should I bring?
+                                    </h5>
                                 </a>
                             </button>
                             <div id="collapse10" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Ten">
@@ -585,8 +585,8 @@
                             <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse12">
                                 <a class="panel-title card-title text-black">
                                     <h5 class="arrow display-5">
-                    Do you provide travel reimbursements?
-                  </h5>
+                                        Do you provide travel reimbursements?
+                                    </h5>
                                 </a>
                             </button>
                             <div id="collapse12" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Twelve">
@@ -603,8 +603,8 @@
                             <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse13">
                                 <a class="panel-title card-title text-black">
                                     <h5 class="arrow display-5">
-                    How does judging work?
-                  </h5>
+                                        How does judging work?
+                                    </h5>
                                 </a>
                             </button>
                             <div id="collapse13" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Thirteen">
@@ -618,8 +618,8 @@
                             <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse15">
                                 <a class="panel-title card-title text-black">
                                     <h5 class="arrow display-5">
-                    404: Question Not Found
-                  </h5>
+                                        404: Question Not Found
+                                    </h5>
                                 </a>
                             </button>
                             <div id="collapse15" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Fifteen">
@@ -641,7 +641,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <h1>Venue</h1>
+                    <h2 class="mb-4 text-center">VENUE</h2>
                     <img src="img/Venue.jpg" class="mlr" alt="MLR convention center">
                     <p>Ravenshaw Convention Center</p>
                     <p class="text-faded mb-4">Ravenshaw University Campus Cuttack, Odisha 753003</p>
@@ -660,8 +660,8 @@
                 <div class="row d-flex align-items-center">
                     <div class="col-md-6 col-lg-2 text-center text-md-left footer-content">
                         <h6 class="white-text">
-              <a href="code-of-conduct/index.html">Code of Conduct</a>
-            </h6>
+                        <a href="code-of-conduct/index.html">Code of Conduct</a>
+                        </h6>
                     </div>
                     <div class="col-lg-6 circle">
                         <div id='ripple'></div>
