About section paragraph fixing

--- a/index.html
+++ b/index.html
@@ -136,15 +136,13 @@
 
     <!-- text-white  mx-auto-->
     <section id="about" class="bg-primary">
-        <di--v class="container">
+        <div class="container">
             <div class="row">
-                <div class="col-lg-8" style="margin-left: 40px; margin-top: 8rem; text-align: justify">
-
-                    <h2 class="section-heading text-white" style="font-size: 2.5rem;">Today's Hackathon System is Broken!</h2>
+                <div class="philo">
+                    <h2 class="section-heading text-center text-white">Today's Hackathon System is Broken!</h2>
                     <p class="text-white">Nothing useful hacks are being created at a hackathon – the lack of time, direction and objective, fuels the creation of Vaporware. 
                         Participants tend to focus on the shiny thing, but they don’t necessarily follow that up with a delivery model that will truly transform their initiative.
                         The problem is that the <b>organizers</b> running hackathons haven’t changed what is behind the curtain in the way of resources, methods, processes and tooling. Which is why half the time ideas fall off the side of the desk after an event.</p>
-
                 </div>
             </div>
             </div>
