Footer fixed, Section color changed

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             </div>
     </section>
 
-    <section id="sponsors" class="bg-primary">
+    <section id="sponsors" class="bg-dark">
         <div class="container text-center">
             <h2 class="mb-5">Past Sponsors</h2>
             <div class="row mb-5" id="sponsors-box">
@@ -393,7 +393,7 @@
     </section>
 
     <!--Wiki-->
-    <section id="wiki">
+    <section id="wiki" class="bg-primary">
         <div class="container">
             <div class="row">
                 <div class="howitworks-title col-lg-12 text-center">
@@ -408,7 +408,7 @@
     </section>
 
     <!--FAQ-->
-    <section id="faq" class="faqs-box bg-primary">
+    <section id="faq" class="faqs-box bg-dark">
 
         <div class="container">
             <div class="row">
@@ -635,7 +635,7 @@
         </div>
     </section>
 
-    <section id="venue">
+    <section id="venue" class="bg-primary">
         <div class="container">
             <div class="row">
                 <div class="col-sm">
@@ -653,7 +653,7 @@
     </section>
 
     <section class="footer">
-        <footer>
+      
             <div class="container">
                 <div class="row d-flex align-items-center">
                     <div class="col-md-6 col-lg-2 text-center text-md-left footer-content">
@@ -695,7 +695,6 @@
                 </div>
                 <!--Grid row-->
             </div>
-        </footer>
     </section>
 
     <script>
