Section div colors

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </header>
 
     <!-- text-white  mx-auto-->
-    <section id="about" class="bg-primary">
+    <section id="about" class="bg-dark">
         <div class="container">
             <div class="row">
                 <div class="philo">
@@ -205,7 +205,7 @@
     </section>
 
     <!--How it works-->
-    <section id="howitworks">
+    <section id="howitworks" class="bg-primary">
         <div class="container">
             <div class="row">
                 <div class="howitworks-title col-lg-12 text-center">
@@ -222,7 +222,7 @@
         </div>
     </section>
 
-    <section id="speakers" class="bg-primary">
+    <section id="speakers" class="bg-dark">
 
         <div class="container">
             <div class="row">
@@ -373,7 +373,7 @@
             </div>
     </section>
 
-    <section id="sponsors" class="bg-dark">
+    <section id="sponsors" class="bg-primary">
         <div class="container text-center">
             <h2 class="mb-5">Past Sponsors</h2>
             <div class="row mb-5" id="sponsors-box">
@@ -393,7 +393,7 @@
     </section>
 
     <!--Wiki-->
-    <section id="wiki" class="bg-primary">
+    <section id="wiki" class="bg-dark">
         <div class="container">
             <div class="row">
                 <div class="howitworks-title col-lg-12 text-center">
@@ -408,7 +408,7 @@
     </section>
 
     <!--FAQ-->
-    <section id="faq" class="faqs-box bg-dark">
+    <section id="faq" class="faqs-box bg-primary">
 
         <div class="container">
             <div class="row">
@@ -635,7 +635,7 @@
         </div>
     </section>
 
-    <section id="venue" class="bg-primary">
+    <section id="venue" class="bg-dark">
         <div class="container">
             <div class="row">
                 <div class="col-sm">
@@ -983,7 +983,7 @@
             <img src="img/GitHub.png" alt="GitHub logo"></img>
           </a>
         </div>
-        <div class="col-lg-4 col-md-6 text-center mb-5 ethglobal sponsors-logo">
+        <div class="col-lg-4 col-md-6 text-center mb-5 startupodisha sponsors-logo">
           <a href="https://" target="_blank">
             <img src="img/StartupOdisha.png" alt="Startup Odisha logo"></img>
           </a>
