--- a/index.html
+++ b/index.html
@@ -399,7 +399,9 @@
                 <div class="howitworks-title col-lg-12 text-center">
                     <h2>Our Wiki</h2>
                 </div>
-                <p>There has been a lot of Hackathons happening all over the globe and especially in india it's being skyrocketed. But the question is, do we truly impact the developer & designer community? Do we have a strong purpose? Do we know the WHY of our Hackathon? Or is it just because someone else is doing and so we are? For this, we are taking a step forward and developing a new Framework for our own hackathon, UtkalHacks to tackle this problem. This is the reason why we have decided to document all the nitty gritty details regarding the WHY, HOW, and WHAT of UtkalHacks in one single place, the UtkalHacks Wiki.</p>
+                <p>There has been a lot of Hackathons happening all over the globe and especially in india it's being skyrocketed. But the question is, do we truly impact the developer &
+                 designer community? Do we have a strong purpose? Read our wiki to find all the nitty
+                   gritty details regarding the WHY, HOW, and WHAT of UtkalHacks in one single place.</p>
                 <div class=" col-lg-12 text-center">
                     <a class="btn btn-secondary" role="button" href="https://wiki.utkalhacks.tech/" target="_blank">Read Our Wiki</a>
                 </div>
