--- a/index.html
+++ b/index.html
@@ -112,14 +112,12 @@
                         <img src="img\assests\Chandrayaan2.png">
                     </div>
                 </div>  
-        <!--
-
         <div class="col-lg-12">
           <h1 style="line-height: 1.2">
             <strong>Odisha's Biggest
               <br>Hackathon</strong>
           </h1>
-        </div>-->
+        </div>
                 <div class="col-lg-12 mt-3">
                     <p class="text-faded" style="line-height: 1.8;">
                     <h5>It's Not Just a Hackathon
@@ -134,13 +132,12 @@
         </div>
     </header>
 
-    <!-- text-white  mx-auto-->
     <section id="about" class="bg-dark">
         <div class="container">
             <div class="row">
                 <div class="philo">
                     <h2 class="section-heading text-center text-white">Today's Hackathon System is Broken!</h2>
-                    <p class="text-white">Nothing useful hacks are being created at a hackathon – the lack of time, direction and objective, fuels the creation of Vaporware. 
+                    <p>Nothing useful hacks are being created at a hackathon – the lack of time, direction and objective, fuels the creation of Vaporware. 
                         Participants tend to focus on the shiny thing, but they don’t necessarily follow that up with a delivery model that will truly transform their initiative.
                         The problem is that the <b>organizers</b> running hackathons haven’t changed what is behind the curtain in the way of resources, methods, processes and tooling. Which is why half the time ideas fall off the side of the desk after an event.</p>
                 </div>
@@ -213,7 +210,7 @@
                 </div>
             </div>
             <p>
-                To begin with, we will invite interested participants to make a quick submission of their idea online. These submissions will be evaluated and the top 20 teams will be shortlisted to attend the SprintDay and HackDay. 
+            To begin with, we will invite interested participants to make a quick submission of their idea online. These submissions will be evaluated and the top 20 teams will be shortlisted to attend the SprintDay and HackDay. 
             Then top 8 teams will be shortlisted for the PitchDay. The top teams at PitchDay will stand to win cash prizes and pilot opportunity with VC partners.
             </p>
             <div class="col-lg-12 text-center">
