--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="favicons/favicon-128.png" sizes="128x128" />
     <meta name="application-name" content="UtkalHacks: Odisha's biggest hackathon." />
-    <meta name="theme-color" content="#132141">
-    <meta name="msapplication-TileColor" content="#132141" />
+    <meta name="theme-color" content="#111c33">
+    <meta name="msapplication-TileColor" content="#111c33" />
     <meta name="msapplication-TileImage" content="favicons/mstile-144x144.png" />
     <meta name="msapplication-square70x70logo" content="favicons/mstile-70x70.png" />
     <meta name="msapplication-square150x150logo" content="favicons/mstile-150x150.png" />
