--- a/index.html
+++ b/index.html
@@ -113,10 +113,11 @@
                     </div>
                 </div>  
         <div class="col-lg-12">
-          <h1 style="line-height: 1.2">
-            <strong>Odisha's Biggest
-              <br>Hackathon</strong>
-          </h1>
+          <h1>
+            <strong>Odisha's Biggest </h1> </strong>
+          <div class="typewriter">
+            <strong> <h1>Hackathon </h1> </strong>
+          </div>
         </div>
                 <div class="col-lg-12 mt-3">
                     <p class="text-faded" style="line-height: 1.8;">
