Sponsors logo and links

--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 startupodisha sponsors-logo">
-          <a href="https://" target="_blank">
+          <a href="https://startupodisha.gov.in/" target="_blank">
             <img src="img/StartupOdisha.png" alt="Startup Odisha logo"></img>
           </a>
         </div>
@@ -994,53 +994,53 @@
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
-          <a href="https://" target="_blank">
+          <a href="https://devfolio.co/" target="_blank">
             <img src="img/Devfolio.svg" alt="Devfolio logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
-          <a href="https://status.im/" target="_blank">
+          <a href="https://matic.network/" target="_blank">
             <img src="img/Matic.svg" alt="Matic logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
-          <a href="https://" target="_blank">
+          <a href="https://www.cloudflare.com/" target="_blank">
             <img src="img/Cloudflare.svg" alt="Cloudflare logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
-          <a href="https://www." target="_blank">
+          <a href="https://www.mongodb.com/" target="_blank">
             <img src="img/MongoDB.svg" alt="MongoDB logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
-          <a href="https://www." target="_blank">
+          <a href="https://www.elastic.co/" target="_blank">
             <img src="img/Elastic.svg" alt="Elastic logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
-          <a href="https://new.consensys.net/" target="_blank">
+          <a href="https://unity.com/" target="_blank">
             <img src="img/Unity.svg" alt="Unity logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
-          <a href="https://gitcoin.co/" target="_blank">
+          <a href="https://bhubaneswar.tie.org/" target="_blank">
             <img src="img/Tie.png" alt="TiE Bhubaneswar logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
-          <a href="https://matic.network/" target="_blank">
+          <a href="https://get.tech/" target="_blank">
             <img src="img/DotTech.png" alt="Dot Tech logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
-          <a href="https://quantstamp.com/" target="_blank">
+          <a href="https://www.bounties.network/" target="_blank">
             <img src="img/Bounties.svg" alt="Bounties Network logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
-          <a href="https://web3.foundation/" target="_blank">
-            <img src="img/Sketch.svg" alt="Sketch logo" id="web3img"></img>
+          <a href="https://www.sketch.com/" target="_blank">
+            <img src="img/sketch.png" alt="Sketch logo" id="web3img"></img>
           </a>
         </div>
 
