Made all the logo white

--- a/index.html
+++ b/index.html
@@ -988,39 +988,39 @@
             <img src="img/StartupOdisha.png" alt="Startup Odisha logo"></img>
           </a>
         </div>
-        <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
+        <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo atlassian" style: "height: 100px; width: 800px;">
           <a href="https://www.atlassian.com" target="_blank">
-            <img src="img/Atlassian.svg" alt="Atlassian logo"></img>
+            <img src="img/atlassian.png" alt="Atlassian logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://devfolio.co/" target="_blank">
-            <img src="img/Devfolio.svg" alt="Devfolio logo"></img>
+            <img src="img/devfolio.png" alt="Devfolio logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://matic.network/" target="_blank">
-            <img src="img/Matic.svg" alt="Matic logo"></img>
+            <img src="img/matic.png" alt="Matic logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://www.cloudflare.com/" target="_blank">
-            <img src="img/Cloudflare.svg" alt="Cloudflare logo"></img>
+            <img src="img/cloudflare.png" alt="Cloudflare logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://www.mongodb.com/" target="_blank">
-            <img src="img/MongoDB.svg" alt="MongoDB logo"></img>
+            <img src="img/mongo.png" alt="MongoDB logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://www.elastic.co/" target="_blank">
-            <img src="img/Elastic.svg" alt="Elastic logo"></img>
+            <img src="img/elastic.png" alt="Elastic logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://unity.com/" target="_blank">
-            <img src="img/Unity.svg" alt="Unity logo"></img>
+            <img src="img/unity.png" alt="Unity logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
