--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://matic.network/" target="_blank">
-            <img src="img/matic.png" alt="Matic logo"></img>
+            <img src="img/Matic.png" alt="Matic logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
