--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,7 @@
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://www.bounties.network/" target="_blank">
-            <img src="img/Bounties.svg" alt="Bounties Network logo"></img>
+            <img src="img/bounties.png" alt="Bounties Network logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
