--- a/index.html
+++ b/index.html
@@ -1063,16 +1063,18 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA06IMZ1lEx9XrzTDcLPALTeojJAl0UY5k&amp;callback=initMap" async defer></script>
     <!-- Global site tag (gtag.js) - Google Analytics 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117782184-1"></script> -->
+   
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154002430-1"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-117782184-1');
+    gtag('config', 'UA-154002430-1');
     </script>
+
 
 </body>
 
