--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>UtkalHacks 2.0| January 31st - February 2, 2020</title>
+    <title>UtkalHacks 2.0| 31st January - 2nd February, 2020</title>
     <meta property="fb:app_id" content="361151391074555" />
-    <meta property="og:title" content="UtkalHacks | 31st January - 3rd Feb 2020 @ Cuttack">
+    <meta property="og:title" content="UtkalHacks | 31st January - 3rd Feb 2020 at Ravenshaw Convention Centre">
     <meta property="og:type" content="website">
     <meta property="og:url" content="index.html">
     <meta property="og:image" content="img/fb-og.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:description" content="UtkalHacks is Odisha's biggest hackathon being organised by Emisha community. UtkalHacks is a community initiative 
-  to bring developers and designers to work together with a problem statements. ">
+  to bring developers and designers to work together with their ideas. ">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@emishacommunity">
     <meta name="twitter:site" content="@emishacommunity">
@@ -118,9 +118,9 @@
         <div class="container my-auto home-container">
             <div class="row">
                 <div id="bg">
-                    <img src="img\assests\Earth.&Stars.jpg" alt="UtkalHacks background" class="img-fluid bg">
+                    <img src="img\assests\Earth.&Stars.jpg" alt="UtkalHacks Background" class="img-fluid bg">
                     <div class="rocketdiv parallax" data-parallax-ratio="6">
-                        <img src="img\assests\Chandrayaan2.png">
+                        <img src="img\assests\Chandrayaan2.png" alt="chandrayaan image">
                     </div>
                 </div>  
         <div class="col-lg-12">
@@ -1071,10 +1071,7 @@
             });
         }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA06IMZ1lEx9XrzTDcLPALTeojJAl0UY5k&amp;callback=initMap" async defer></script>
-    <!-- Global site tag (gtag.js) - Google Analytics 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117782184-1"></script> -->
-   
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA06IMZ1lEx9XrzTDcLPALTeojJAl0UY5k&amp;callback=initMap" async defer></script>   
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154002430-1"></script>
