--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -13,11 +13,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Utkal Hacks | November 30 - December 2, 2018</title>
-    <meta property="fb:app_id" content="361151391074555" />
+    <title>Utkal Hacks |</title>
+    <meta property="fb:app_id" content="" />
     <meta
       property="og:title"
-      content="UtkalHacks | 31st January - 3rd Feb 2020 @ Cuttack"
+      content="UtkalHacks | 31st January - 3rd Feb 2020 at Ravenshaw Convention Centre"
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="index.html" />
