Framework Images Responsive

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                             <div class="speaker-card-body">
                                 <div class="speaker-card-header">
                                     <h5>Tadit Dash</h5>
-                                    <p class="text-faded">Microsoft MVP, TedX Speaker, Sr. Software Engineer
+                                    <p class="text-faded">Microsoft MVP, TedX Speaker
                                         <br />Mindfire</p>
                                 </div>
                             </div>
@@ -651,7 +651,7 @@
             <div class="row">
                 <div class="col-sm">
                     <h2 class="mb-4 text-center">VENUE</h2>
-                    <img src="img/Venue.jpg" class="mlr" alt="MLR convention center">
+                    <img src="img/Venue.jpg" class="rcc" alt="Ravenshaw Convention Center">
                     <p>Ravenshaw Convention Center</p>
                     <p class="text-faded mb-4">Ravenshaw University Campus Cuttack, Odisha 753003</p>
                     <a class="btn btn-secondary" role="button" href="https://goo.gl/maps/SCQvrmc1SS54Y6pb7" target="_blank">Get Directions</a>
