FAQ  Colors changd

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
     </section>
 
     <!--FAQ-->
-    <section id="faq" class="faqs-box bg-primary">
+    <section id="faq" class="faqs-box">
 
         <div class="container">
             <div class="row">
