--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                 </div>
                                 <div class="carousel-item">
                                     <div class="frameworksection d-block w-100">
-                                        <img class="frameworksectionimg d-block w-100" src="./img/assests/Hack Day-01.png" alt="">
+                                        <img class="frameworksectionimg d-block w-100" src="./img/assests/Sprint-day.png" alt="">
                                         <div class="frameworksectiontext d-block w-100">
                                             <h5>Tracing the Trajectory - SprintDay</h5>
                                             <p>Time to drift towards the moon! But, before you set sail, gather your ideas, brainstorm on them, create the prototype, let no crap pass, because just like the trajectory of a spacecraft, your project needs to be well-focused and legitimate. In doing so, you even get to collaborate with UI/UX designers to shape your path with finesse!</p>
