--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     </ol>
                     <div class="container">
                         <div class="frameworkcontainer">
-                            <h2 class="section-heading text-white text-center">We have a new Framework for Hackathon!</h2>
+                            <h2 class="section-heading text-white text-center">A new Framework for Hackathon!</h2>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="frameworksection d-block w-100">
