--- a/index.html
+++ b/index.html
@@ -1081,17 +1081,17 @@
 
             // lazy loading sponsor's images
             const sponsorsBox =
-                `<div class="col-lg-4 col-md-6 text-center mb-5 mt-2 sponsors-logo">
-          <a href="https://www.github.com" target="_blank">
-            <img src="img/GitHub.png" alt="GitHub logo"></img>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-6 text-center mb-5 startupodisha sponsors-logo">
-          <a href="https://startupodisha.gov.in/" target="_blank">
-            <img src="img/StartupOdisha.png" alt="Startup Odisha logo"></img>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo atlassian" style: "height: 100px; width: 800px;">
+                `<div class="col-lg-6 col-md-6  mb-5 titlespons">
+                     <a href="https://www.github.com" target="_blank">
+                         <img src="img/GitHub.png" alt="GitHub logo">
+                     </a>
+                </div>
+                <div class="col-lg-6 col-md-6 mb-5 titlespons">
+                    <a href="https://devfolio.co/" target="_blank">
+                        <img src="img/devfolio.png" alt="Devfolio logo"></img>
+                    </a>
+                </div>
+        <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://www.atlassian.com" target="_blank">
             <img src="img/atlassian.png" alt="Atlassian logo"></img>
           </a>
