Sponsor logos added

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
     <section id="sponsors" class="bg-primary">
         <div class="container text-center">
-            <h2 class="mb-5">Past Sponsors</h2>
+            <h2 class="mb-5">Our Sponsors</h2>
             <div class="row mb-5" id="sponsors-box">
             </div>
         </div>
@@ -1081,36 +1081,42 @@
 
             // lazy loading sponsor's images
             const sponsorsBox =
-                `<div class="col-lg-6 col-md-6  mb-5 titlespons">
+                `<div class="col-lg-6 col-md-6  mb-5 firsttier">
                      <a href="https://www.github.com" target="_blank">
-                         <img src="img/GitHub.png" alt="GitHub logo">
+                         <img src="img/github.svg" alt="GitHub logo">
                      </a>
                 </div>
-                <div class="col-lg-6 col-md-6 mb-5 titlespons">
+                <div class="col-lg-6 col-md-6 mb-5 firsttier">
                     <a href="https://devfolio.co/" target="_blank">
-                        <img src="img/devfolio.png" alt="Devfolio logo"></img>
+                        <img src="img/Devfolio.svg" alt="Devfolio logo"></img>
                     </a>
                 </div>
-        <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
-          <a href="https://www.atlassian.com" target="_blank">
-            <img src="img/atlassian.png" alt="Atlassian logo"></img>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
-          <a href="https://devfolio.co/" target="_blank">
-            <img src="img/devfolio.png" alt="Devfolio logo"></img>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
-          <a href="https://matic.network/" target="_blank">
-            <img src="img/Matic.png" alt="Matic logo"></img>
+        <div class="col-lg-4 col-md-6 text-center mb-5 secondtier sponsors-logo">
+          <a href="https://clarisights.com/" target="_blank">
+            <img src="img/clarisights.svg" alt="Atlassian logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://www.cloudflare.com/" target="_blank">
-            <img src="img/cloudflare.png" alt="Cloudflare logo"></img>
+            <img src="img/cloudflare.svg" alt="Cloudflare logo"></img>
           </a>
         </div>
+        <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
+          <a href="https://matic.network/" target="_blank">
+            <img src="img/Matic.svg" alt="Matic logo"></img>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
+          <a href="https://twist.com/" target="_blank">
+            <img src="img/twist.svg" alt="Twist logo"></img>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
+          <a href="https://todoist.com/" target="_blank">
+            <img src="img/todoist.svg" alt="Todoist logo"></img>
+          </a>
+        </div>
+        <!--
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://www.mongodb.com/" target="_blank">
             <img src="img/mongo.png" alt="MongoDB logo"></img>
@@ -1145,7 +1151,7 @@
           <a href="https://www.sketch.com/" target="_blank">
             <img src="img/sketch.png" alt="Sketch logo" id="web3img"></img>
           </a>
-        </div>
+        </div> -->
 
         `;
 
