--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,7 @@
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://www.cloudflare.com/" target="_blank">
-            <img src="img/cloudflare.svg" alt="Cloudflare logo"></img>
+            <img src="img/Cloudflare.svg" alt="Cloudflare logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
