--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>UtkalHacks 2.0| 31st January - 2nd February, 2020</title>
     <meta property="fb:app_id" content="361151391074555" />
-    <meta property="og:title" content="UtkalHacks | 31st January - 3rd Feb 2020 at Ravenshaw Convention Centre">
+    <meta property="og:title" content="UtkalHacks | 31st Jan - 2nd Feb, 2020 at Ravenshaw Convention Centre">
     <meta property="og:type" content="website">
     <meta property="og:url" content="index.html">
     <meta property="og:image" content="img/fb-og.png" />
