--- a/index.html
+++ b/index.html
@@ -1116,6 +1116,11 @@
             <img src="img/todoist.svg" alt="Todoist logo"></img>
           </a>
         </div>
+        <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
+          <a href="https://todoist.com/" target="_blank">
+            <img src="img/stickermule.svg" alt="Todoist logo"></img>
+          </a>
+        </div>
         <!--
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://www.mongodb.com/" target="_blank">
