--- a/index.html
+++ b/index.html
@@ -1117,8 +1117,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
-          <a href="https://todoist.com/" target="_blank">
-            <img src="img/stickermule.svg" alt="Todoist logo"></img>
+          <a href="https://www.stickermule.com/" target="_blank">
+            <img src="img/stickermule.svg" alt="Stickermule logo"></img>
           </a>
         </div>
         <!--
