--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@
         document.addEventListener('DOMContentLoaded', function () {
         let devfolioOptions = {
         buttonSelector: '.devfolio-apply-now',
-        key: 'myhackathonkey',
+        key: 'utkalhacks',
         }
 
         let script = document.createElement('script');
