--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,7 @@
     <script>
         document.addEventListener('DOMContentLoaded', function () {
         let devfolioOptions = {
-        buttonSelector: '.devfolio-apply-now',
+        buttonSelector: '#devfolio-apply-now',
         key: 'utkalhacks',
         }
 
