--- a/index.html
+++ b/index.html
@@ -377,6 +377,36 @@
                         </div>
                     </a>
                 </div>
+                
+                 <div class="col-xl-2 col-md-4 col-sm-4 col-6">
+                    <a href="https://www.linkedin.com/in/priyabrata-pati/" target="_blank">
+                        <div class="speaker-card">
+                            <img class="speaker-card-img-top" src="img/priyabrata.jpg" alt="Priyabrata Pati">
+                            <div class="speaker-card-body">
+                                <div class="speaker-card-header">
+                                    <h5>Aftab Alam</h5>
+                                    <p class="text-faded">Associate Lead
+                                        <br />Kare4U Healthcare</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                
+                 <div class="col-xl-2 col-md-4 col-sm-4 col-6">
+                    <a href="https://www.linkedin.com/in/priyabrata-pati/" target="_blank">
+                        <div class="speaker-card">
+                            <img class="speaker-card-img-top" src="img/priyabrata.jpg" alt="Priyabrata Pati">
+                            <div class="speaker-card-body">
+                                <div class="speaker-card-header">
+                                    <h5>Sunny Babatyal</h5>
+                                    <p class="text-faded">Software Engineer
+                                        <br />Kare4U Healthcare</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
 
             </div>
     </section>
