mentors added sunny and aftab
change

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Past Speakers & Judges</h2>
+                    <h2 class="section-heading">Our Past Speakers & Mentors</h2>
                 </div>
             </div>
         </div>
@@ -282,7 +282,7 @@
                                 <div class="speaker-card-header">
                                     <h5>Nirmal Hota</h5>
                                     <p class="text-faded">Project Lead
-                                        <br />Mindfire</p>
+                                        <br />Mindfire Solutions</p>
                                 </div>
                             </div>
                         </div>
@@ -370,8 +370,38 @@
                             <div class="speaker-card-body">
                                 <div class="speaker-card-header">
                                     <h5>Priyabrata Pati</h5>
-                                    <p class="text-faded">Software Ingineer
+                                    <p class="text-faded">Software Engineer
                                         <br />Kare4U Healthcare</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-xl-2 col-md-4 col-sm-4 col-6">
+                    <a href="https://www.linkedin.com/in/aftabalam8028/" target="_blank">
+                        <div class="speaker-card">
+                            <img class="speaker-card-img-top" src="img/aftab.jpeg" alt="Aftab Alam">
+                            <div class="speaker-card-body">
+                                <div class="speaker-card-header">
+                                    <h5>Aftab Alam</h5>
+                                    <p class="text-faded">Associate Lead
+                                        <br />Mindfire Solutions</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                
+                 <div class="col-xl-2 col-md-4 col-sm-4 col-6">
+                    <a href="https://www.linkedin.com/in/batabyalsunny/" target="_blank">
+                        <div class="speaker-card">
+                            <img class="speaker-card-img-top" src="img/sunny.jpeg" alt="Sunny Batabyal">
+                            <div class="speaker-card-body">
+                                <div class="speaker-card-header">
+                                    <h5>Sunny Batabyal</h5>
+                                    <p class="text-faded">Software Engineer
+                                        <br />Mindfire Solutions</p>
                                 </div>
                             </div>
                         </div>
