--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                             <div class="speaker-card-body">
                                 <div class="speaker-card-header">
                                     <h5>Sunny Batabyal</h5>
-                                    <p class="text-faded">Software Engineer
+                                    <p class="text-faded">Sr. Software Engineer
                                         <br />Mindfire Solutions</p>
                                 </div>
                             </div>
