--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                         <a class="nav-link js-scroll-trigger" title="About" href="#about">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" title="howitworks" href="#howitworks">HOW IT WORKS</a>
+                        <a class="nav-link js-scroll-trigger" title="howitworks" href="#howitworks">REGISTRATION PROCESS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" title="Speakers" href="#speakers">SPEAKERS</a>
+                        <a class="nav-link js-scroll-trigger" title="Speakers" href="#speakers">SPEAKER</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" title="Schedule" href="#schedule">SCHEDULE</a>
@@ -98,7 +98,7 @@
                         <a class="nav-link js-scroll-trigger" title="Sponsors" href="#sponsors">SPONSORS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" title="Wiki" href="#wiki">OUR WIKI</a>
+                        <a class="nav-link js-scroll-trigger" title="Wiki" href="#wiki">WIKI</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" title="faq" href="#faq">FAQ</a>
@@ -218,15 +218,18 @@
         <div class="container">
             <div class="row">
                 <div class="howitworks-title col-lg-12 text-center">
-                    <h2>How It Works !</h2>
+                    <h2>Registration Process!</h2>
                 </div>
             </div>
             <p>
-            To begin with, we will invite interested participants to make a quick submission of their idea online. These submissions will be evaluated and the top 20 teams will be shortlisted to attend the SprintDay and HackDay. 
-            Then top 8 teams will be shortlisted for the PitchDay. The top teams at PitchDay will stand to win cash prizes and pilot opportunity with VC partners.
+                To begin with, participants will have to make a quick submission of some of the onboarding questionnaires on the Devfolio platform. See the questionnaires <a href="https://wiki.utkalhacks.tech/how-it-works/registration-process" target="blank">here. </a>
+
+                Once you are done with the onboarding questionnaires, you will have to update your Devfolio profile if needed. 
+                
+                After the final submission, your Devfolio profile along with the answers of the questionnaires will be evaluated and the top 30 teams will be shortlisted to attend the<a href="https://wiki.utkalhacks.tech/introduction/framework/sprintday" target="blank"> SprintDay</a> and <a href="https://wiki.utkalhacks.tech/introduction/framework/hackday" target="blank">HackDay. </a>
             </p>
             <div class="col-lg-12 text-center">
-            <a class="btn btn-secondary" role="button" href="https://wiki.utkalhacks.tech/how-it-works" target="_blank">How It Works</a>
+            <a   href="https://wiki.utkalhacks.tech/how-it-works" target="_blank">Read More</a>
             </div>
         </div>
     </section>
@@ -423,10 +426,8 @@
             <p class="mb-5">
                 <a href="mailto:sponsorships@emisha.community" class="text-center">sponsorships@emisha.community</a>
             </p>
-            <h3>Download Sponsorship Brochure</h3>
-            <div class="col-lg-12 text-center">
-                <a class="btn btn-secondary" role="button" href="./docs/UtkalHacks 2.0 Prospectus.pdf" target="_blank">Download</a>
-            </div>
+            <h3><a href="href="./docs/UtkalHacks 2.0 Prospectus.pdf" style="color: aliceblue;">Download Sponsorship Brochure</a></h3>
+            
         </div>
     </section>
 
