--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 After the final submission, your Devfolio profile along with the answers of the questionnaires will be evaluated and the top 30 teams will be shortlisted to attend the<a href="https://wiki.utkalhacks.tech/introduction/framework/sprintday" target="blank"> SprintDay</a> and <a href="https://wiki.utkalhacks.tech/introduction/framework/hackday" target="blank">HackDay. </a>
             </p>
             <div class="col-lg-12 text-center">
-            <a   href="https://wiki.utkalhacks.tech/how-it-works" target="_blank">Read More</a>
+            <a   href="https://wiki.utkalhacks.tech/how-it-works" target="blank" style="color: aliceblue;text-decoration: underline;font-weight: bold;">Read More</a>
             </div>
         </div>
     </section>
@@ -426,7 +426,7 @@
             <p class="mb-5">
                 <a href="mailto:sponsorships@emisha.community" class="text-center">sponsorships@emisha.community</a>
             </p>
-            <h3><a href="href="./docs/UtkalHacks 2.0 Prospectus.pdf" style="color: aliceblue;">Download Sponsorship Brochure</a></h3>
+            <h3><a href="docs/UtkalHacks2.0Prospectus.pdf" style="color: aliceblue;text-decoration: underline;">Download Sponsorship Brochure</a></h3>
             
         </div>
     </section>
