--- a/index.html
+++ b/index.html
@@ -166,14 +166,15 @@
                     </ol>
                     <div class="container">
                         <div class="frameworkcontainer">
-                            <h2 class="section-heading text-white text-center">A new Framework for Hackathon!</h2>
+                            <h2 class="section-heading text-white text-center">A New Framework for Hackathon!</h2>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="frameworksection d-block w-100">
                                         <img class="frameworksectionimg d-block w-100" src="./img/assests/Hack Day-01.png" alt="">
-                                        <div class="frameworksectiontext">
-                                            <h5> Escaping Gravity - Hackweek</h5>
+                                        <div class="frameworksectiontext" >
+                                           <a href="https://wiki.utkalhacks.tech/introduction/framework/hackweeks" target="blank"> <h5> Escaping Gravity - Hackweek</h5>
                                             <p>A month-long season of workshops on topics ranging from UI/UX, Front-End & Back-End Development to DevOps basics and much more, revolving around different colleges in Bhubaneswar to propel the reach of the aspiring minds and our sponsors to launch themselves into a space of diverse exploration!</p>
+                                             </a>
                                         </div>
                                     </div>
                                 </div>
@@ -181,8 +182,10 @@
                                     <div class="frameworksection d-block w-100">
                                         <img class="frameworksectionimg d-block w-100" src="./img/assests/Sprint-day.png" alt="">
                                         <div class="frameworksectiontext d-block w-100">
+                                                <a href="https://wiki.utkalhacks.tech/introduction/framework/sprintday" target="blank">
                                             <h5>Tracing the Trajectory - SprintDay</h5>
                                             <p>Time to drift towards the moon! But, before you set sail, gather your ideas, brainstorm on them, create the prototype, let no crap pass, because just like the trajectory of a spacecraft, your project needs to be well-focused and legitimate. In doing so, you even get to collaborate with UI/UX designers to shape your path with finesse!</p>
+                                        </a>
                                         </div>
                                     </div>
                                 </div>
@@ -190,8 +193,10 @@
                                     <div class="frameworksection d-block w-100">
                                         <img class="frameworksectionimg d-block w-100" src="./img/assests/Hack Day-01.png" alt="">
                                         <div class="frameworksectiontext d-block w-100">
+                                                <a href="https://wiki.utkalhacks.tech/introduction/framework/hackday" target="blank">
                                             <h5>Entering the Orbit - HackDay</h5>
                                             <p>The second and third day will see the participants work on the development of their projects to give it its final shape. So get ready to fire your retro thrusters and enter the orbit of full-on innovation as you go through the HackDay, hustling to fix the pieces into the puzzle! At the end, a practice pitch will be presented to a panel of judges.</p>
+                                        </a>
                                         </div>
                                     </div>
                                 </div>
@@ -199,8 +204,10 @@
                                     <div class="frameworksection d-block w-100">
                                         <img class="frameworksectionimg d-block w-100" src="./img/assests/Hack Day-01.png" alt="">
                                         <div class="frameworksectiontext d-block w-100">
+                                                <a href="https://wiki.utkalhacks.tech/introduction/framework/pitchday" target="blank">
                                             <h5>The Touchdown - PitchDay</h5>
                                             <p>Slow down turbo! The last day will see the shortlisted teams deliver the final pitch of their projects to the judges. Make sure the landing is soft and smooth, hard and improper landings can cause failure, be it a spacecraft or your presentation. Rewards are synonymous to success, that means you get to win cash prizes and pilot opportunities with VC partners.</p>
+                                        </a>
                                         </div>
                                     </div>
                                 </div>
