--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                             </button>
                             <div id="collapse1" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-One">
                                 <p class="panel-text display-7 panel-body">
-                                    We encourage and welcome undergraduate students, recent graduates and also working professionals to join us. But the ratio of students particpants will be higher than professianls. And we also highly recommend UX Designers to join us at UtkalHacks.</p>
+                                    We encourage and welcome undergraduate students, recent graduates and also working professionals to join us. But the ratio of students particpants will be higher than professianls. We also highly encourage UX Designers to join us at UtkalHacks.</p>
 
                             </div>
                         </div>
