--- a/team.html
+++ b/team.html
@@ -223,7 +223,7 @@
             </a>
         </div>
         
-            <div class="col-xl-2 col-md-4 col-sm-4 col-6">
+        <div class="col-xl-2 col-md-4 col-sm-4 col-6">
             <a href="https://www.linkedin.com/in/batabyalsunny/" target="_blank">
                 <div class="speaker-card">
                     <img class="speaker-card-img-top" src="img/Team/shivam.jpg" alt="Sunny Batabyal">
@@ -232,6 +232,36 @@
                             <h5>Shivam Kumar</h5>
                             <p class="text-faded">Content Team Lead
                                 <br />Tech Scout</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <div class="col-xl-2 col-md-4 col-sm-4 col-6">
+            <a href="https://www.linkedin.com/in/batabyalsunny/" target="_blank">
+                <div class="speaker-card">
+                    <img class="speaker-card-img-top" src="img/Team/sudhanshu.jpg" alt="Sunny Batabyal">
+                    <div class="speaker-card-body">
+                        <div class="speaker-card-header">
+                            <h5>Sudhanshu Kumar</h5>
+                            <p class="text-faded">Content Team
+                                <br />Tech Scout</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <div class="col-xl-2 col-md-4 col-sm-4 col-6">
+            <a href="https://www.linkedin.com/in/batabyalsunny/" target="_blank">
+                <div class="speaker-card">
+                    <img class="speaker-card-img-top" src="img/Team/raj.jpg" alt="Sunny Batabyal">
+                    <div class="speaker-card-body">
+                        <div class="speaker-card-header">
+                            <h5>Raj Tiwari</h5>
+                            <p class="text-faded">Content Strategist
+                                <br /></p>
                         </div>
                     </div>
                 </div>
